...
            android:layout_marginTop="180dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/id_flags_search_edit_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="Enter ISO country code"
                android:imeOptions="actionDone"
                android:onTextChanged="@{(text, start, before, count) -> viewModel.onCountryIsoCodeTextChanged(text)}"
                app:layout_constraintBottom_toTopOf="@id/id_button_search"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </com.google.android.material.textfield.TextInputLayout>


...
