...

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/toolbar_title"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        tools:text="@string/find_flag_fragment_label"
                        android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                        android:textColor="@color/app_white"
                        app:layout_constraintBottom_toBottomOf="parent"
...

        </com.google.android.material.appbar.AppBarLayout>

        <include layout="@layout/content_main" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/button_add_flag_to_collection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/fab_margin"
            android:enabled="@{viewModel.isPreviewAvailableObservableBoolean}"
            android:onClick="@{()-> viewModel.onAddFlagToCollection()}"
...
